[package]
name = "opensea_testnet_api"
version = "0.1.0"
edition = "2021"
authors = ["hnihsan <helmi.n.ihsan@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marine-rs-sdk ={ version = "0.6.13", features = ["logger"] }
log = "0.4.8"

[[bin]]
path = "src/main.rs"
name = "opensea_testnet_api"